Use of Random Forest to predict customer churn for TelCo

--- a/Predict_Customer_Churn.ipynb
+++ b/Predict_Customer_Churn.ipynb
@@ -43,7 +43,7 @@
         "id": "y5ApBBVTDf1G"
       },
       "source": [
-        "# Predicting Customer Churn in Python"
+        "# Predicting Customer Churn for Telecommunication Company  "
       ]
     },
     {
